# simple-browser

./: .gitignore  flake.nix  justfile
simple_browser/: Cargo.toml  rust-toolchain.toml
simple_browser/net/wasabi/: Cargo.toml
simple_browser/net/wasabi/src/: http.rs  lib.rs
simple_browser/sb_core/: Cargo.toml
simple_browser/sb_core/src/: browser.rs  http.rs  url.rs
simple_browser/sb_core/src/renderer/: mod.rs  page.rs
simple_browser/sb_core/src/renderer/dom/: node.rs
simple_browser/sb_core/src/renderer/html/: parser.rs  token.rs
simple_browser/src/: main.rs
simple_server/: test.html
